modificaciones en gadgetForm

--- a/catalog.html
+++ b/catalog.html
@@ -15,6 +15,9 @@
     <title>El Mercader-Catálogo</title>
     
 </head>
+
+<body>
+    
     <h1 class="ui header">
         <span class="library"></span><center>El Mercader Ltda.</center> </span></h1>
     <h2 style="text-align: center;">Catálogo</h2>
@@ -67,6 +70,6 @@
         </div>
     </div> 
     <div><a class="link" href="index.html"><button class="btn btn-primary btn-block mb-2" onclick="return login()">Iniciar Sesión</button></a></div>
-
+</body>
    
 </html>
