--- a/login.html
+++ b/login.html
@@ -57,16 +57,15 @@
                     </div>
                     <br>
                     <button class="btn btn-primary btn-block mb-2" onclick="return login()">Iniciar Sesión</button>
+                    <div><p><center><a class="link" href="register.html"><b>¿No tienes cuenta? Créala aquí</a></center></p></div> 
                     <div class="text-center">
-                          <div><center><p><a class="link" href="index.html"><b>Ir al inicio</b></a></p></center></div> 
+                    <div><center><p><a class="link" href="index.html"><b>Ir al inicio</b></a></p></center></div> 
                     </div>
                 </div>
             </div>
         </form>
     </div>
     
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" 
-    crossorigin="anonymous"></script>      
+         
 </body>
 </html>
